<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.chinaso.toutiao.view.CustomActionBar
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_below="@id/actionbar"
        android:id="@+id/user_nickname_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="#ffffff"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/user_name" />

        <EditText
            android:id="@+id/user_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="18dp"
            android:layout_marginEnd="18dp"
            android:layout_toLeftOf="@+id/arrow"
            android:layout_toStartOf="@+id/arrow"
            android:layout_toRightOf="@id/tv_name"
            android:layout_toEndOf="@id/tv_name"
            android:background="@null"
            android:gravity="end"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:maxLines="1"
            android:hint="@string/user_name_edit" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp"
            android:src="@mipmap/my_arrow" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_nickname_layout"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:text="@string/user_show_style"
        android:textSize="13sp" />

    <RelativeLayout
        android:id="@+id/user_avatar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_nickname_layout"
        android:layout_marginTop="25dp"
        android:background="#ffffff"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/user_photo" />

        <ImageView
            android:id="@+id/arrow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:src="@mipmap/my_arrow" />
    </RelativeLayout>

    <Button
        android:id="@+id/user_save"
        style="@style/register_login_button"
        android:layout_below="@id/user_avatar_layout"
        android:layout_margin="25dp"
        android:enabled="false"
        android:padding="10dp"
        android:text="@string/user_save" />
</RelativeLayout>
